Generics_Extend/Code11_error_report.txt
javac errors for Code11.java 
Code11.java:26: error: bad operand types for binary operator '+'
        return item + items.get(0);
                    ^
  first type:  T
  second type: T
  where T is a type-variable:
    T extends Object declared in method <T>invalidMethod(List<T>,T)
1 error
 
============================================================================= 
ExtendJ errors for Code11.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend\Code11.java:26: error: T is not numeric
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend\Code11.java:26: error: T is not numeric
 
============================================================================= 
Eclipse ECJ errors for Code11.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend\Code11.java (at line 26)
	return item + items.get(0);
	       ^^^^^^^^^^^^^^^^^^^
The operator + is undefined for the argument type(s) T, T
----------
1 problem (1 error)
